	* config/spu/spu.c (spu_scalar_mode_supported_p): Declare with bool.
	(spu_vector_mode_supported_p, spu_handle_fndecl_attribute): Likewise.
	(spu_handle_vector_attribute, spu_pass_by_reference): Likewise.
	(spu_rtx_costs, spu_function_ok_for_sibcall): Likewise.

	PR target/44640
	* config/spu/spu.c (ea_load_store_inline): Use add_reg_note.

2010-06-22  Joern Rennecke  <joern.rennecke@embecosm.com>

	PR bootstrap/44512
	* genenums.c (main): Output include of insn-constants.h
	* Makefile.in (insn-enums.o): Depend on insn-constants.h.

2010-06-22  H.J. Lu  <hongjiu.lu@intel.com>

	* config/i386/i386.md (unit): Also check sseishft1.

2010-06-22  Jan Hubicka  <jh@suse.cz>

	* gimple.h (gimple_expr_code): Do checking on when gimple checking is enabled.

2010-06-22  Jan Hubicka  <jh@suse.cz>

	* df-problems.c (df_rd_confluence_n, df_lr_confluence_n, df_live_confluence_n,
	df_byte_lr_confluence_n, df_md_confluence_n): Return true if something changed.
	* df.h (df_confluence_function_n): Return bool.
	* df-core.c (df_worklist_propagate_forward, df_worklist_propagate_backward):
	track changes and ages.
	(df_worklist_dataflow_doublequeue): Use bitmap iterator for main walk;
	track ages.
	* dse.c (dse_confluence_n): Return always true.

2010-06-22  Jan Hubicka  <jh@suse.cz>

	* bitmap.c (bitmap_clear_bit): Micro optimize.

2010-06-22  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.md (SWI1248x): New mode iterator.
	(SWI48x): Ditto.
	(SWI12): Ditto.
	(SWI24): Ditto.
	
	(mov<mode>): Macroize expander from mov{qi,hi,si,di} using
	SWI1248x mode iterator.
	(*push<mode>2_rex64): Macroize insn from *push{qi,hi,si}_rex64
	using SWI124 mode iterator.
	(*push<mode>2): Macroize insn from *push{qi,hi} using SWI12
	mode iterator.
	(*push<mode>2_prologue): Macroize insn from  *pushsi2_prologue and
	*pushdi2_prologue_rex64 using P mode iterator.
	(*mov<mode>_xor): Macroize insn from *movsi_xor and *movdi_xor_rex64
	using SWI48 mode iterator.